--- a/bios.html
+++ b/bios.html
@@ -4,6 +4,7 @@
 		<title>Experience DVC</title> <!--Change this title to the title of your page, eg. "Clubs"-->
 		<!--You should link your own stylesheet as well as the two that are already here.-->
 		<link rel="stylesheet" href="index.css"> 
+		<link rel="stylesheet" href="bio.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	</head>
 	<body>
