--- a/bios.html
+++ b/bios.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Experience DVC</title> <!--Change this title to the title of your page, eg. "Clubs"-->
 		<!--You should link your own stylesheet as well as the two that are already here.-->
-		<link rel="stylesheet" href="index.css"> 
+		<link rel="stylesheet" href="index.css">
 		<link rel="stylesheet" href="bio.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	</head>
@@ -38,7 +38,9 @@
 		</div>
 		<!--Do not edit the zone above. This is the uniform header.-->
 		<!--Put your content here.-->
-		<p>Here are biographies for students who go to Da Vinci Communications. You can read about Juniors and Seniors. Eventually, as classes graduate, you will be able to read about where our students have gone after high school. You can also add us on LinkedIn to connect with us as we enter the working world. To read about DVC students, click on a Pathway class and a student's picture.</p>
+		<edge>
+			<p>Here are biographies for students who go to Da Vinci Communications. You can read about Juniors and Seniors. Eventually, as classes graduate, you will be able to read about where our students have gone after high school. You can also add us on LinkedIn to connect with us as we enter the working world. To read about DVC students, click on a Pathway class and a student's picture.</p>
+		</edge>
 	</body>
 </html>
 
