--- a/bios.html
+++ b/bios.html
@@ -38,9 +38,9 @@
 		</div>
 		<!--Do not edit the zone above. This is the uniform header.-->
 		<!--Put your content here.-->
-		<edge>
+		<div class="edge">
 			<p>Here are biographies for students who go to Da Vinci Communications. You can read about Juniors and Seniors. Eventually, as classes graduate, you will be able to read about where our students have gone after high school. You can also add us on LinkedIn to connect with us as we enter the working world. To read about DVC students, click on a Pathway class and a student's picture.</p>
-		</edge>
+		</div>
 	</body>
 </html>
 
