--- a/index.html
+++ b/index.html
@@ -37,38 +37,40 @@
 			</table>
 		</div>
 		<!--Do not edit the zone above. This is the uniform header.-->
-		<!--Put your content here.-->
-		<p class="home">This is a student-run website designed to provide a window to the soul of Da Vinci Communcations High school through the eyes of the students. Here, you can see the projects that we get to experience, read about some of our student body, and look at the clubs that are avalible to us. We hope that you enjoy your time Experiencing DVC.</p>
-		<br>
-		<br>
-		<br>
-		<div class="scene">
-			<div class="wrapper">
-				<ul class="ball">
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				  <li class="ring"></li>
-				</ul>
+		<div class="edge">
+			<!--Put your content here.-->
+			<p class="home">This is a student-run website designed to provide a window to the soul of Da Vinci Communcations High school through the eyes of the students. Here, you can see the projects that we get to experience, read about some of our student body, and look at the clubs that are avalible to us. We hope that you enjoy your time Experiencing DVC.</p>
+			<br>
+			<br>
+			<br>
+			<div class="scene">
+				<div class="wrapper">
+					<ul class="ball">
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					<li class="ring"></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</body>
