--- a/2017.html
+++ b/2017.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Experience DVC</title> <!--Change this title to the title of your page, eg. "Clubs"-->
+		<title>Computer Science Biographies</title> <!--Change this title to the title of your page, eg. "Clubs"-->
 		<!--You should link your own stylesheet as well as the two that are already here.-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-		<link rel="stylesheet" href="index.css">  
-		<link rel="stylesheet" href="spin.css">
+		<link rel="stylesheet" href="index.css"> 
+		<link rel="stylesheet" href="bio.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="index.js"></script>
+		<script src="bio.js"></script>
 	</head>
 	<body>
 		<!--Do not edit the following zone. This is the uniform header.-->
@@ -46,41 +47,23 @@
 		<!--Do not edit the zone above. This is the uniform header.-->
 		<div class="edge">
 			<!--Put your content here.-->
-			<p>This is a student-run website designed to provide a window to the soul of Da Vinci Communcations High school through the eyes of the students. Here, you can see the projects that we get to experience, read about some of our student body, and look at the clubs that are avalible to us. We hope that you enjoy your time Experiencing DVC.</p>
+			<button class="click" type="button" onclick="alhassand()"><img class="profile" src="images/alhassand.jpg" /></button>
+			<button class="click" type="button" onclick="allys()"><img class="profile" src="images/allys.jpg" /></button>
+			<button class="click" type="button" onclick="ashleyd()"><img class="profile" src="images/ashleyd.jpg" /></button>
+			<button class="click" type="button" onclick="baltazard()"><img class="profile" src="images/baltazard.jpg" /></button>
+			<button class="click" type="button" onclick="bethanyg()"><img class="profile" src="images/bethanyg.jpg" /></button>
+			<button class="click" type="button" onclick="briannaw()"><img class="profile" src="images/briannaw.jpg" /></button>
+			<button class="click" type="button" onclick="brittneym()"><img class="profile" src="images/brittneym.jpg" /></button>
+			<button class="click" type="button" onclick="ernestinan()"><img class="profile" src="images/ernestinan.jpg" /></button>
+			<button class="click" type="button" onclick="hannahp()"><img class="profile" src="images/hannahp.jpg" /></button>
 			<br>
 			<br>
-			<br>
-			<div class="scene">
-				<div class="wrapper">
-					<ul class="ball">
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					<li class="ring"></li>
-					</ul>
-				</div>
-			</div>
+			<h2 id="name"></h2>
+			<p id="bio"></p>
+			<p id="future"></p>
+			<a id="link" target="blank" href=""><p id="linkt"></p></a>
 		</div>
 	</body>
 </html>
 
-<!-- https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_ref_js_dropdown_multilevel_css&stacked=h -->
+<!-- https://codepen.io/sethabbott/pen/cewzF -->
