--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<ul class="dropdown-menu unfold menucolor">
 								<li  class="current"><a tabindex="-1" href="https://hannahpoy.github.io/biographies/">Home</a></li>
 								<li><a tabindex="-1" href="https://jenniferlynjohnson.github.io/yearbook/">Projects</a></li>
-								<li  class="current"><a tabindex="-1" href="https://ernestinanavarro.github.io/clubs/">Clubs</a></li>
+								<li  class="current"><a tabindex="-1" href="https://invis.io/3TBP5DFCZ#/233139040_Experience_DVC_Sign-Up">Clubs</a></li>
 								<li class="dropdown-submenu menucolor">
 									<a class="test menucolor" tabindex="-1" href="https://hannahpoy.github.io/biographies/bios.html">Student Biographies <span class="caret"></span></a>
 									<ul class="dropdown-menu menucolor">
