--- a/2018.html
+++ b/2018.html
@@ -51,12 +51,37 @@
 			<button class="click" type="button" onclick="alejandros()"><img class="profile" src="images/alejandros.jpg" /></button>
 			<button class="click" type="button" onclick="alessandrap()"><img class="profile" src="images/alessandrap.jpg" /></button>
 			<button class="click" type="button" onclick="amirr()"><img class="profile" src="images/amirr.jpg" /></button>
-			<button class="click" type="button" onclick="ashtonb()"><img class="profile" src="images/ashtonb.jpg" /></button>
+			<button class="click" type="button" onclick="ashleyb()"><img class="profile" src="images/ashleyb.jpg" /></button>
+			<button class="click" type="button" onclick="ashtonb()"><img class="profile" src="images/blank.jpg" /></button>
 			<button class="click" type="button" onclick="breannad()"><img class="profile" src="images/breannad.jpg" /></button>
+			<button class="click" type="button" onclick="camrynm()"><img class="profile" src="images/camrynm.jpg" /></button>
+			<button class="click" type="button" onclick="chloea()"><img class="profile" src="images/chloea.jpg" /></button>
+			<button class="click" type="button" onclick="chloet()"><img class="profile" src="images/chloet.jpg" /></button>
+			<button class="click" type="button" onclick="eddief()"><img class="profile" src="images/eddief.jpg" /></button>
+			<button class="click" type="button" onclick="elaizav()"><img class="profile" src="images/elaizav.jpg" /></button>
+			<button class="click" type="button" onclick="ethans()"><img class="profile" src="images/ethans.jpg" /></button>
+			<button class="click" type="button" onclick="giovannir()"><img class="profile" src="images/giovannir.jpg" /></button>
+			<button class="click" type="button" onclick="janaep()"><img class="profile" src="images/janaep.jpg" /></button>
+			<button class="click" type="button" onclick="jazmind()"><img class="profile" src="images/jazmind.jpg" /></button>
 			<button class="click" type="button" onclick="jenniferj()"><img class="profile" src="images/jenniferj.jpg" /></button>
+			<button class="click" type="button" onclick="jonathanr()"><img class="profile" src="images/blank.jpg" /></button>
+			<button class="click" type="button" onclick="josephv()"><img class="profile" src="images/josephv.jpg" /></button>
+			<button class="click" type="button" onclick="joyouss()"><img class="profile" src="images/joyouss.jpg" /></button>
 			<button class="click" type="button" onclick="kaim()"><img class="profile" src="images/kaim.jpg" /></button>
+			<button class="click" type="button" onclick="lionelq()"><img class="profile" src="images/lionelq.jpg" /></button>
+			<button class="click" type="button" onclick="martinaf()"><img class="profile" src="images/martinaf.jpg" /></button>
 			<button class="click" type="button" onclick="merita()"><img class="profile" src="images/merita.jpg" /></button>
+			<button class="click" type="button" onclick="milanw()"><img class="profile" src="images/milanw.jpg" /></button>
+			<button class="click" type="button" onclick="nickf()"><img class="profile" src="images/nickf.jpg" /></button>
+			<button class="click" type="button" onclick="noahr()"><img class="profile" src="images/noahr.jpg" /></button>
+			<button class="click" type="button" onclick="rileya()"><img class="profile" src="images/rileya.jpg" /></button>
+			<button class="click" type="button" onclick="robertog()"><img class="profile" src="images/robertog.jpg" /></button>
 			<button class="click" type="button" onclick="rocioh()"><img class="profile" src="images/rocioh.jpg" /></button>
+			<button class="click" type="button" onclick="rubenc()"><img class="profile" src="images/rubenc.jpg" /></button>
+			<button class="click" type="button" onclick="sophias()"><img class="profile" src="images/sophias.jpg" /></button>
+			<button class="click" type="button" onclick="vaughna()"><img class="profile" src="images/vaughna.jpg" /></button>
+			<button class="click" type="button" onclick="wendyr()"><img class="profile" src="images/wendyr.jpg" /></button>
+			<button class="click" type="button" onclick="williamj()"><img class="profile" src="images/williamj.jpg" /></button>
 			<br>
 			<br>
 			<h2 id="name"></h2>
